--- a/cardgame/src/App.css
+++ b/cardgame/src/App.css
@@ -38,13 +38,15 @@
 }
 
 .imageContainer {
-  width: 80%;
+  width: 50%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
+  margin: auto;
+
 }
 
 .nameContainer {
   text-align: center;
   padding: 10px 20px;
+
 }
